Mon Nov  2 13:36:04 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l (handle_close_brace): Also handle case of ']' followed by
	other assignment ops (+=, -=, ...).

	* pt-assign.cc (tree_simple_assignment::rvalue): Correctly handle
	return value and printing for operators other than `='.
	(tree_multi_assignment::rvalue): Likewise.

	* pt-assign.h (tree_multi_assignment::etype): New data member.
	* pt-assign.cc 	(tree_multi_assignment::rvalue): Use it instead of
	assuming `='.
	(tree_multi_assignment::oper): New function.
	* pt-pr-code.cc (tree_print_code::visit_multi_assignment): Use
	it instead of always printing `='. 
	* parse.y (make_assign_op): Pass expression type to
	tree_multi_assignment constructor.	

	* Makefile.in (stmp-pic): New target.
	($(PICOBJ)): Depend on stmp-pic, not pic.
	(clean): Delete stmp-pic.

Sun Nov  1 23:24:55 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mappers.cc (install_mapper_functions): Add alias for isfinite.

Sat Oct 31 08:46:55 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data.cc (Fisnumeric): New function.

Fri Oct 30 08:39:30 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-lvalue.cc (octave_lvalue::do_unary_op): Make it work for
	indexed ops too.
	* ov.cc (octave_value::unary_op_to_assign_op): New function.
	(octave_value::do_non_const_unary_op): New function for	indexed ops.

	* parse.y (LEFTDIV_EQ, ELEFTDIV_EQ): New tokens.
	(assign_expr): Add rules for them.
	(make_assign_op): Handle them here too.
	* lex.l: Recognize them.
	* ov.h (octave_value::assign_op): Add ldiv_eq and el_ldiv_eq.
	* ov.cc (octave_value::assign_op_as_string): Ditto.
	(octave_value::op_eq_to_binary_op): Ditto.
	(octave_value::assign): Handle OP= style operators with brute force.
	(octave_value::simple_assign): New function.

	* parse.y (matrix): Dont' forget to reset
	lexer_flags.looking_at_matrix_or_assign_lhs.

	* oct-lvalue.cc (octave_lvalue::assign): Don't call change
	function if error occurs.