@@ -1,3 +1,13 @@
+Tue Nov  3 09:40:24 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* data.cc (Fis_bool): New function.
+	Also add alias for islogical.
+
+	* ov.h (octave_value::is_bool_type): New function.
+	* ov-base.h (octave_base_value::is_bool_type): Likewise.
+	* ov-bool.h (octave_bool::is_bool_type): Likewise.
+	* ov-bool-mat.h (octave_bool_matrix::is_bool_type): Likewise.
+
 Mon Nov  2 13:36:04 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* lex.l (handle_close_brace): Also handle case of ']' followed by
